--- a/frontend/views/assignment.handlebars
+++ b/frontend/views/assignment.handlebars
@@ -1,13 +1,11 @@
 <div>
   <div class="mx-4 mt-4 flex flex-row justify-between">
-    <form action="/courses/{{assignment.id}}">
-      <button type="submit" class = "p-2 bg-blue-50 rounded shadow text-blue-900 border border-blue-300 flex flex-row items-center hover:bg-blue-100">
+      <a href="/courses/{{assignment.class_id}}" class="p-2 bg-blue-50 rounded shadow text-blue-900 border border-blue-300 flex flex-row items-center hover:bg-blue-100">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
         </svg>
-        <span>&nbspBack to Course</span>
-      </button>
-    </form>
+        <span class="pl-2">Back to Course</span>
+      </a>
 
     {{!-- For changing views. Not Implemented --}}
     {{!-- <form class = "p-2 bg-blue-50 rounded shadow text-blue-900 border border-blue-300 flex flex-row items-center">
