"Filter Classes" -> "Filter Courses"

--- a/frontend/views/courses.handlebars
+++ b/frontend/views/courses.handlebars
@@ -21,7 +21,7 @@
       </button>
 
       <form class="flex flex-col mt-1">
-        <label for="class-search" class="text-xl mr-2">Filter Classes</label>
+        <label for="class-search" class="text-xl mr-2">Filter Courses</label>
         <span>
           <input type="text" id="class-search" name="search" />
           <input type="submit" value="Filter">
