Add filter for students

--- a/frontend/views/courses.handlebars
+++ b/frontend/views/courses.handlebars
@@ -23,8 +23,9 @@
       <form class="flex flex-col mt-1">
         <label for="class-search" class="text-xl mr-2">Filter Courses</label>
         <span>
-          <input type="text" id="class-search" name="search" />
-          <input type="submit" value="Filter">
+          <input type="text" id="class-search" name="search" class="py-1" />
+          <input type="submit" value="Filter" class="text-sm text-white py-1 px-2 bg-indigo-400 shadow rounded cursor-pointer" />
+          <a href="/"><button type="button" class="text-sm inline text-white py-1 px-2 bg-indigo-400 shadow rounded">Clear Filter</p></a>
         </span>
       </form>
       </div>
