Bugfix: fix "clear filter" for students

--- a/frontend/views/students.handlebars
+++ b/frontend/views/students.handlebars
@@ -24,7 +24,7 @@
         <span>
           <input type="text" id="class-search" name="search" class="py-1" />
           <input type="submit" value="Filter" class="text-sm text-white py-1 px-2 bg-indigo-400 shadow rounded cursor-pointer" />
-          <a href="/"><button type="button" class="text-sm inline text-white py-1 px-2 bg-indigo-400 shadow rounded">Clear Filter</p></a>
+          <a href="/students"><button type="button" class="text-sm inline text-white py-1 px-2 bg-indigo-400 shadow rounded">Clear Filter</p></a>
         </span>
       </form>
       </div>
