--- a/frontend/views/courses.handlebars
+++ b/frontend/views/courses.handlebars
@@ -73,7 +73,7 @@
 
       <ul>
       {{#each courses}}
-        <li class = "bg-white h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
+        <li class = "bg-white min-h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
           <a class = "hover:underline" href="/courses/{{this.id}}">
             {{this.subject}}{{this.course_number}} - {{this.title}}
           </a>
