--- a/frontend/views/course-info.handlebars
+++ b/frontend/views/course-info.handlebars
@@ -135,7 +135,7 @@
                 {{!-- Students List --}}
                 <ul>
                     {{#each students}}
-                      <li class = "bg-white h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
+                      <li class = "bg-white min-h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
                           <a class = "hover:underline" href="/students/{{this.id}}">{{this.first_name}} {{this.last_name}}</a>
                           <div class = "text-blue-500 hover:text-blue-800">
                                 <button class="js-remove-student-button" data-student-id="{{this.id}}" data-course-id="{{../course.id}}">
