--- a/frontend/views/course-info.handlebars
+++ b/frontend/views/course-info.handlebars
@@ -50,7 +50,7 @@
                 {{!-- Assignments List --}}
                 <ul>
                     {{#each assignments}}
-                        <li class = "bg-white h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
+                        <li class = "bg-white min-h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
                             <a class = "hover:underline" href="/assignments/{{this.id}}">{{this.title}}</a>
                             <div class = "flex flex-row justify-between w-20 text-blue-500 hover:text-blue-800">
                                 <button class = "modal_open">Edit</button>
