--- a/frontend/views/student.handlebars
+++ b/frontend/views/student.handlebars
@@ -11,7 +11,7 @@
         <ul>
         {{#each courses}}
           <a class = "hover:underline" href="/courses/{{this.id}}">
-            <li class = "bg-white h-14 border border-blue-300 shadow flex flex-row justify-between items-center p-4 m-2 hover:bg-gray-50">
+            <li class = "bg-white min-h-14 border border-blue-300 shadow flex flex-row justify-between items-center p-4 m-2 hover:bg-gray-50">
               
                 {{this.subject}}{{this.course_number}} - {{this.title}}
               
