--- a/frontend/views/students.handlebars
+++ b/frontend/views/students.handlebars
@@ -66,7 +66,7 @@
 
       <ul>
       {{#each students}}
-        <li class = "bg-white h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
+        <li class = "bg-white min-h-14 border border-blue-300 shadow flex flex-row  justify-between items-center p-4 m-2 hover:bg-gray-50">
           <a class = "hover:underline" href="/students/{{this.id}}">
             {{this.pin}}
             -
