--- a/frontend/views/students.handlebars
+++ b/frontend/views/students.handlebars
@@ -19,6 +19,7 @@
         Add Student
       </button>
 
+      {{!-- Student Filter --}}
       <form class="flex flex-col mt-1">
         <label for="class-search" class="text-xl mr-2">Filter Students</label>
         <span>
